--- a/llm-notes/frontend/index.html
+++ b/llm-notes/frontend/index.html
@@ -6,53 +6,53 @@
   <title>LLM Notes Summarizer</title>
   <style>
     body {
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
       font-family: 'Segoe UI', sans-serif;
       padding: 40px;
       color: #333;
     }
     h2 {
       text-align: center;
-      font-size: 2rem;
-      color: #003366;
+      font-size: 2.2rem;
+      color: #002b5b;
     }
     .container {
-      max-width: 700px;
+      max-width: 750px;
       margin: auto;
-      background: #ffffffcc;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      background: #ffffffee;
+      padding: 35px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
     input[type="file"] {
       display: block;
-      margin: 20px auto;
-      padding: 8px;
+      margin: 25px auto;
+      font-size: 1rem;
     }
     button {
       display: block;
       margin: auto;
-      background-color: #007bff;
+      background-color: #6a11cb;
       color: white;
-      padding: 12px 25px;
+      padding: 14px 30px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       font-size: 1rem;
       cursor: pointer;
       transition: 0.3s ease;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #2575fc;
     }
     .result {
-      margin-top: 30px;
+      margin-top: 35px;
     }
     textarea {
       width: 100%;
       height: 180px;
-      padding: 12px;
+      padding: 14px;
       border: 1px solid #ccc;
-      border-radius: 10px;
+      border-radius: 12px;
       font-size: 1rem;
       background-color: #f9f9f9;
       resize: none;
@@ -66,10 +66,10 @@
 </head>
 <body>
   <div class="container">
-    <h2>🧠 LLM Notes Summarizer</h2>
+    <h2>📄 AI Notes Summarizer & Keyword Extractor</h2>
     <form id="upload-form" enctype="multipart/form-data">
-      <input type="file" id="file" accept=".pdf" />
-      <button type="submit">Summarize PDF</button>
+      <input type="file" id="file" accept=".pdf,.docx,.jpg,.jpeg,.png" />
+      <button type="submit">Summarize Now</button>
     </form>
 
     <div class="result" id="result"></div>
@@ -80,7 +80,7 @@
       event.preventDefault();
       const fileInput = document.getElementById("file");
       const file = fileInput.files[0];
-      if (!file) return alert("Please select a PDF file!");
+      if (!file) return alert("Please select a file!");
 
       const formData = new FormData();
       formData.append("file", file);
